--- a/index.html
+++ b/index.html
@@ -4,5 +4,24 @@
     <meta charset="utf-8">
     <title>JavaScriptの練習</title>
 </head>
-
+    <script>
+        /*
+            数値
+                10
+                2.5
+                -2.5
+             演算子
+                + - * / %
+                += 代入を伴う演算子
+                ++ -- 単項演算子
+        */
+        var x;
+        x = 10 * 2; // 20
+        x = 10 % 3;
+        // x = x + 5;
+        x += 5; // 6
+        x++; // 7
+        x--; // 6
+        console.log(x);
+    </script>
 </html>
