--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
 </head>
     <script>
         /*
-            文字列
-                表現方法
-                特殊文字
-            演算子
-        */
-        var s;
-        s = "hello";
-        s = 'hel\'lo';
-        // \n 開業
-        // \t タブ
-        s = 'it\'s\n a pe\tn.'
-        
-        s = "hello " + "world";
-        s = "5" + 5; // 55
+            条件分岐
+            if(条件) {
+                真
+            } else {
+                偽
+            }
 
-        console.log(s);
+            比較演算子
+                > <
+                >= <=
+                === ==
+                !== !=
+
+            論理演算子
+                AND &&
+                OR ||
+                NTO !
+                score > 60 && score < 80
+        */
+        var score = 50;
+        if (score > 60) {
+            console.log("ok!");
+        } else if (score > 40) {
+            console.log("soso...");
+        } else {
+            console.log("ng!");
+        }
     </script>
 </html>
