--- a/index.html
+++ b/index.html
@@ -6,24 +6,21 @@
 </head>
     <script>
         /*
-            条件分岐
-            switch
+            ループ処理
+            while
+                do .. while
         */
-        var signal = "pink";
-        switch (signal) {
-            case "red":
-                console.log("stop!");
-                break;
-            case "green":
-            case "blue":
-                console.log("go!");
-                break;
-            case "yellow":
-                console.log("slow down!");
-                break;
-            default:
-                console.log("wrong signal");
-                break;
+        var i = 200;
+/*
+        while (i < 10) {
+            console.log(i);
+            i++;
         }
+*/
+
+        do {
+            console.log(i);
+            i++;
+        } while (i < 10);
     </script>
 </html>
