--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <script>
         /*
             ループ処理
-            while
-                do .. while
-        */
-        var i = 200;
-/*
-        while (i < 10) {
-            console.log(i);
-            i++;
-        }
-*/
+            for
 
-        do {
+            break ループ処理を抜ける
+            continue ループ処理を1回スキップ
+        */
+
+        for (var i = 0; i < 10; i++) {
+            if (i ===5) {
+                // break;
+                continue;
+            }
             console.log(i);
-            i++;
-        } while (i < 10);
+        }
     </script>
 </html>
