--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
 </head>
     <script>
         /*
-            タイマー処理
-                setInterval
-                setTimeout
+            配列: グループ化されたデータ
         */
-        var i = 0;
-        function show() {
-            console.log(i++);
-            var tid = setTimeout(function(){
-                show();
-            }, 1000);
-            if (i > 3) {
-                clearTimeout(tid);
-            }
-        }
-        show();
+        /*
+        var score = [100, 300, 500, "taguchi"];
+        console.log(score[0]); // 添字 0, 1, ...
+        score[2] = 400;
+        console.log(score);
+        */
+
+        var m = [
+            [1, 2, 3],
+            [4, 5, 6]
+        ];
+        console.log(m[1][1]);
 
     </script>
 </html>
