--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="utf-8">
     <title>JavaScriptの練習</title>
+    <style>
+        .myStyle {
+            font-weight: bold;
+            border: 1px solid gray;
+        }
+    </style>
 </head>
 <body>
     <h1>見出し</h1>
     <p id="msg">こんにちは！</p>
     <script>
-        /*
-            
-        */
-        // console.dir(window);
-        // console.log(window.outerHeight);
-        // window.location.href = "http://dotinstall.com";
-
-        // window.document - 今開いているページ
-
-        // document object model (DOM)
+       var e = document.getElementById('msg');
+       e.textContent = "hello!";
+       e.style.color = "red";
+       e.className = "myStyle";
+       
+       /*
+            body
+                p
+                    text
+       */ 
+       var greet = document.createElement('p');
+           text = document.createTextNode('hello world');
+       document.body.appendChild(greet).appendChild(text);
 
     </script>
 </body>
